--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
 # Combine global build options with OS/compiler-dependent options
 - export CMAKE_OPTIONS=${CMAKE_OPTIONS}" "${ENV_CMAKE_OPTIONS}
 - export CXX_FLAGS=${CXX_FLAGS}" "${ENV_CXX_FLAGS}
-
+- pip install --user cpp-coveralls
 
 script:
 ############################################################################
