--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ matrix:
         #- gcov-4.9
         - clang-3.7
         - valgrind
-        - libgtest-dev
+install:
+- sudo apt-get install libgtest-dev
 
 before_install:
 # Combine global build options with OS/compiler-dependent options
