--- a/core/test/CMakeLists.txt
+++ b/core/test/CMakeLists.txt
@@ -1,13 +1,12 @@
 cmake_minimum_required(VERSION 3.2)
 
-file(GLOB NET_TEST_SRC *.cpp)
-set(TEST_NAME cpx_net_test)
+file(GLOB CORE_TEST_SRC *.cpp)
+set(TEST_NAME cpx_core_test)
 
 include_directories($GTEST_INCLUDE_DIR)
 
-add_executable(${TEST_NAME} ${NET_TEST_SRC})
+add_executable(${TEST_NAME} ${CORE_TEST_SRC})
 target_link_libraries(${TEST_NAME}
-        cpx_net
         cpx_core
         ${GTEST_LIBRARY}
         ${GTEST_MAIN_LIBRARY}
